full smooth sections moving with fixtd section_wrapp

--- a/style.css
+++ b/style.css
@@ -32,18 +32,13 @@ nav ul li:not(:first-child){
 
 
 .section{
-	/* position: relative; */
-	overflow-x: hidden;
-	max-width: 100%;
-	height: 300vh;
-	/* padding-top: 100px; */
-	/*overflow: hidden;*/
+	min-height: calc(100vh + 1500px);
 	outline: 1px solid;
 	transition: .3s;
 }
 .section.hidden {
 	opacity: 0;
-	visibility: hidden
+	visibility: hidden;
 }
 .section::before {
 	content: '';
@@ -64,9 +59,12 @@ nav ul li:not(:first-child){
 .section0::before{
 	background: #4CE675;
 }
-.section__wrapp{
-	min-height: 100vh;
-	max-width: 100%;
+.section.ready .section__wrapp{
+	position: fixed;
+	height: 100%;
+	width: 100%;
+	left: 0;
+	top: 0;
 }
 h1{
 	margin:0;
@@ -78,13 +76,9 @@ h2{
 	font-size: 50px;
 	text-transform: uppercase;
 }
-/*.section__wrapp h2{
-	position: sticky;
-	top: calc(50vh - .5em);
-	margin-bottom: calc(100vh - 1em);
-	bottom: 0;
-	transform: translateX(calc(var(--progress) * 50px));
-}*/
+.section__wrapp h2{
+	margin-top: calc(50vh - .5em);
+}
 .section1::before{
 	background: #CB2E1A;
 }
